@@ -5,6 +5,7 @@
 	- fix dialog destroy that deletes the dialog.
 	- alert icon has nicer exclamation mark.
 	- added configfile and example.conf.
+	- Reprobe command.
 
 16 Aug 2011: Wouter
 	- detect localhost in DHCP DNS servers and skip them, because a loop
